# data_serialization

./: CMakeLists.txt  README.md  setup.bat
examples/: simple_rpc.cpp
include/: apply.h  bitfield.h  generated.h  interchange_float.h  invoke.h  reinterpret_memory.h  strict_alias.h  transparently_serializable.h  unpack_and_invoke.h
include/zero_cost_serialization/: apply.h  bitfield.h  generated.h  interchange_float.h  invoke.h  reinterpret_memory.h  serializable.h  strict_alias.h
tests/: tests.cpp
tools/: codegen.cpp
